--- a/app/routes/articles.hello-world.mdx
+++ b/app/routes/articles.hello-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Hello world: how I built this site'
+title: 'Hello world: I am Ivan'
 abstract: I originally built this portfolio site back in 2018, and since then it's evolved quite a bit. Recently I migrated from Create React App to Next.js and made some major upgrades in the process.
 date: '2022-04-21'
 banner: /static/hello-world-banner.jpg
